--- a/chicago_bulls_project-u3221852.Rmd
+++ b/chicago_bulls_project-u3221852.Rmd
@@ -414,5 +414,5 @@ To discover players that had a greater impact on winning we used the four factor
 ## Danuel House	- Small Forward	- $247827
 ## Davis Bertans - Power Forward	- $7000000
 
+## Used $56,190,421 in salary cap
 
-6. In report
